Fix subtree workflow

--- a/.github/workflows/subtree.yml
+++ b/.github/workflows/subtree.yml
@@ -2,7 +2,7 @@
 
 name: CI
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
@@ -27,4 +27,4 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Git subtree merge
-        run: git subtree merge -P $GITHUB_WORKSPACE/src/
+        run: git subtree merge -P $GITHUB_WORKSPACE/src/ HEAD
